# VELA

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  Vela7  check.py  check_sim.py  download_huggingface.py  pyproject.toml
.agents/skills/cpu-kernels/scripts/: analyze_op.py  benchmark_cpu.py  cpu_profiler.py  trial_manager.py  validate_cpu_kernel.py
.agents/skills/cuda-kernels/scripts/: benchmark_example.py  benchmark_rmsnorm.py  huggingface_kernels_example.py  ltx_kernel_injection_example.py  transformers_injection_example.py
.agents/skills/huggingface-llm-trainer/scripts/: convert_to_gguf.py  dataset_inspector.py  estimate_cost.py  hf_benchmarks.py  unsloth_sft_example.py
.agents/skills/huggingface-paper-publisher/scripts/: paper_manager.py
.agents/skills/huggingface-vision-trainer/scripts/: dataset_inspector.py  estimate_cost.py  image_classification_training.py  object_detection_training.py  sam_segmentation_training.py
.omp/: config.yml
.opencode/: opencode.json
VELA-v7/: README.md  __init__.py  calc_ctxlen.py  evaluate.py  evaluate_hfds.py  export.py  train.py
VELA-v7/app/: app_cpu.py  app_gpu.py  app_merge.py  benchmark_gpu.py  modeling_rwkv.py  modeling_vision.py
VELA-v7/cuda/: wkv7_op.cpp
VELA-v7/eval/: convert_mmbench_for_submission.py  convert_videomme_for_eval.py  convert_vizwiz_for_submission.py  convert_vqav2_for_submission.py  eval_gpa_badcase_by_gpt.py  eval_gqa.py  eval_interleave.py  eval_pope.py  eval_science_qa.py  eval_textvqa.py  eval_vqa.py  eval_your_results.py  pca_vis.py  run_lm_eval.py  sample_lite_dataset.py  vela_eval.py
VELA-v7/scripts/eval/: eval_infovqa.sh  eval_vqav2_val.sh  scan.sh  scan_hyperparameter.py
VELA-v7/scripts/other/: diff_stem_delete_common.py  process_pdfs_to_md.py
VELA-v7/src/: config.py  dataset.py  model.py  trainer.py  utils.py
VELA-v7/src/models/: __init__.py  vla.py  vlm.py
VELA-v7/src/siglino/: __init__.py  attention.py  configs.py  configuration_siglino.py  image_processor.py  model.py  modeling_siglino.py  moe.py  rope.py  utils.py
VELA-v7/src/siglino/kernels/: __init__.py  cpu_attn.py  cuda_attn.py
VELA-v7/tests/: test_moe_early_fusion.py  test_vla.py  test_with_weights.py
VELA-v7/tokenizer/: rwkv_tokenizer.py  rwkv_vocab_v20230424.txt
VELA-v7/v7.04/: README.md  train.py
VELA-v7/v7.04/eval/: eval_vqa.py
VELA-v7/v7.04/scripts/eval/: eval_chartqa.sh  eval_docvqa.sh
VELA-v7/v7.04/src/: model.py
VELA-v7/v7.04/tests/: test_with_weights.py
