[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Vela7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets",
    "deepspeed",
    "editdistance",
    "gradio",
    "huggingface-hub",
    "lm-eval",
    "ninja",
    "numpy",
    "openai",
    "pandas",
    "pillow",
    "pycocoevalcap",
    "pymupdf",
    "nvidia-ml-py",
    "pytorch-lightning",
    "rouge",
    "rwkv",
    "scikit-learn",
    "timm",
    "torch",
    "torchvision",
    "tqdm",
    "tokenizers",
    "transformers",
    "unidecode",
    "wandb",
    "ggml-python",
    "pytest",
    "matplotlib",
    "torchao",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[[tool.uv.index]]
name = "ggml"
url = "https://abetlen.github.io/ggml-python/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
ggml-python = { index = "ggml"}

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

[tool.pytest.ini_options]
pythonpath = ["VELA-v7"]
testpaths = ["VELA-v7/tests"]
[tool.setuptools]
package-dir = {"Vela7" = "VELA-v7"}
py-modules = ["Vela7.train", "Vela7.evaluate", "Vela7.evaluate_hfds", "Vela7.export", "Vela7.calc_ctxlen"]
packages = [
    "Vela7",
    "Vela7.src",
    "Vela7.src.siglino",
    "Vela7.src.siglino.kernels",
    "Vela7.src.models",
    "Vela7.tokenizer",
    "Vela7.app",
    "Vela7.eval"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
